# EAIR

./: .gitignore  README.md  config.json  hop.py  main.py  pyproject.toml  run_eair_slurm.sh  utils.py
prompt/: hop_plan.json  q_entity_extract.json  qa_prompt.json
