[project]
name = "eair"
version = "1.0.0"
description = "EAIR: Evidence-Aware Iterative Reasoning for Multi-hop Question Answering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2.0.0",
    "torch>=2.0.0",
    "transformers>=4.44.2",
    "accelerate>=0.20.0",
    "tqdm>=4.66.0",
]
